--- a/dvwa_web/src/main/webapp/WEB-INF/web.xml
+++ b/dvwa_web/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,22 @@
       classpath*:springmysql/applicationContextMS-*.xml
     </param-value>
   </context-param>
+  <filter>
+    <filter-name>sql_injection</filter-name>
+    <filter-class>filter.Sql_Injection_Filter</filter-class>
+  </filter>
+  <filter>
+    <filter-name>sql_injection_high</filter-name>
+    <filter-class>filter.Sql_Injection_Filter_high</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>sql_injection</filter-name>
+    <url-pattern>/sqlinjection2.do</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>sql_injection_high</filter-name>
+    <url-pattern>/sqlinjection3.do</url-pattern>
+  </filter-mapping>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
@@ -29,3 +45,6 @@
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 </web-app>
+
+
+
